added tags and spell checked

--- a/_posts/projects/2013-08-19-AutoLiftBed.html
+++ b/_posts/projects/2013-08-19-AutoLiftBed.html
@@ -3,6 +3,12 @@ layout: post
 title:  "Auto-Lift Bed"
 date:   2013-08-19
 categories: projects
+tags:
+- design
+- construction
+- mechanics
+- cad
+- solidworks
 ---
 
 <p>When I first moved to Georgia Tech, I was living in a very small 1BR/1BA apartment. After being there for a while, I decided to make a bed that could fold completely out of the way. It is totally freestanding and holds a queen sized mattress. It takes a little bit of strength to lift up, but not much.</p>
