--- a/_posts/projects/2013-03-28-First3Dprints.html
+++ b/_posts/projects/2013-03-28-First3Dprints.html
@@ -4,6 +4,12 @@ title:  "First 3D prints"
 date:   2013-03-28
 categories: projects
 imageDir: First3Dprints
+tags:
+- 3d printing
+- design
+- mechanics
+- cad
+- solidworks
 ---
 
 <p>These were the first 3D prints I made back when the Whitaker machine shop at GT first got Makerbots. There are some legos and a ball and socket joint.</p>
