--- a/_posts/projects/2015-04-17-IBVSwSribbler.html
+++ b/_posts/projects/2015-04-17-IBVSwSribbler.html
@@ -9,6 +9,6 @@ tags:
 - computer vision
 - motion planning
 ---
-<p>As a final project for our intro to robotics class at Georgia Tech, we were required to use a Scribbler robot for visual servoing. The goal was to park the robot one foot in front of the square on the wall. Alexa Siu and I worked on the project together and decided to use an image based technique (versus a positional technique). We were relatively pleased with the outcome. </p>.
-`
-<iframe width="560" height="315" src="https://www.youtube.com/embed/QYWbr0RtCyo" frameborder="0" allowfullscreen ></iframe>
+<p>As a final project for our intro to robotics class at Georgia Tech, we were required to use a Scribbler robot for visual servoing. The goal was to park the robot one foot in front of the square on the wall. Alexa Siu and I worked on the project together and decided to use an image based technique (versus a positional technique). We were relatively pleased with the outcome. </p>
+
+{{"https://www.youtube.com/embed/QYWbr0RtCyo" | insertYouTube}}
