fixed all media scaling

--- a/_posts/projects/2013-08-19-AutoLiftBed.html
+++ b/_posts/projects/2013-08-19-AutoLiftBed.html
@@ -14,6 +14,5 @@ tags:
 <p>When I first moved to Georgia Tech, I was living in a very small 1BR/1BA apartment. After being there for a while, I decided to make a bed that could fold completely out of the way. It is totally freestanding and holds a queen sized mattress. It takes a little bit of strength to lift up, but not much.</p>
 <p>All of the design work can be found on <a href=https://grabcad.com/library/loft-bed-2>GrabCad</a>. Do note that I did make some minor design changes as I went during fabrication and never did put those back into the models.</p>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/b0nCnXNGmBg" frameborder="0" allowfullscreen></iframe>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/dAQi21dUNiY" frameborder="0" allowfullscreen></iframe>
+{{"https://www.youtube.com/embed/b0nCnXNGmBg" | insertYouTube}}
+{{"https://www.youtube.com/embed/dAQi21dUNiY" | insertYouTube}}
