added all papers and guitar project

--- a/primaryPages/writings.html
+++ b/primaryPages/writings.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: Papers
-permalink: /papers/
+title: Writings
+permalink: /writings/
 ---
-<h3>Here are some papers that I have written.</h3>
+<h3>Here lies a smattering of writings. They are a combination of individual efforts and group work.</h3>
 
   <table>
     {% for post in site.categories.papers %}
