setup iframe stuff to use more flexible include system

--- a/_posts/projects/2013-03-28-First3Dprints.html
+++ b/_posts/projects/2013-03-28-First3Dprints.html
@@ -13,6 +13,8 @@ tags:
 ---
 
 <p>These were the first 3D prints I made back when the Whitaker machine shop at GT first got Makerbots. There are some legos and a ball and socket joint.</p>
+<!-- {% include pics.html src="intussassist/Paper Prototype" style="medPic" %} -->
 
-{{"https://www.youtube.com/embed/tc0nJsgD-pI"|fourThreeIframe}}
-{{"https://www.youtube.com/embed/btDP1WqMkO8"|fourThreeIframe}}
+{% include iframe.html src="https://www.youtube.com/embed/tc0nJsgD-pI" width=75 ratio=75 %}
+<br/>
+{% include iframe.html src="https://www.youtube.com/embed/btDP1WqMkO8" width=75 ratio=75 %}
