--- a/_posts/projects/2015-04-17-IBVSwSribbler.html
+++ b/_posts/projects/2015-04-17-IBVSwSribbler.html
@@ -11,4 +11,4 @@ tags:
 ---
 <p>As a final project for our intro to robotics class at Georgia Tech, we were required to use a Scribbler robot for visual servoing. The goal was to park the robot one foot in front of the square on the wall. Alexa Siu and I worked on the project together and decided to use an image based technique (versus a positional technique). We were relatively pleased with the outcome. </p>
 
-{{"https://www.youtube.com/embed/QYWbr0RtCyo" | insertYouTube}}
+{% include iframe.html src="https://www.youtube.com/embed/QYWbr0RtCyo" width=100 ratio=56.25 %}
