changed landing page for projects and tags to be fancy fixed #3 fixed #4

--- a/_posts/projects/2013-03-28-First3Dprints.html
+++ b/_posts/projects/2013-03-28-First3Dprints.html
@@ -10,6 +10,8 @@ tags:
 - mechanics
 - CAD
 - solidworks
+thumb: "First3Dprints/WP_000750.jpg"
+summary: The first 3D printed parts I ever made
 ---
 
 <p>These were the first 3D prints I made back when the Whitaker machine shop at GT first got Makerbots. There are some legos and a ball and socket joint.</p>
