updated about me

--- a/primaryPages/about.html
+++ b/primaryPages/about.html
@@ -14,3 +14,11 @@ permalink: /about/
 
 <h3>Hobbies</h3>
 <p>I love sailing (although I no longer have a sailboat) and live music. I also love creating stuff, that can be designing and building something from metal or wood or writing code. I also enjoy cooking and obviously eating (who doesn't). Lately I have also been getting back into rock climbing.</p>
+
+<h3>Family Background</h3>
+<p>My mother is from Colombia, she moved to New Orleans with her family, when she was eight. My father was born in Baton Rouge and raised in New Orleans. His parents are both Cuban. My grandmother moved to New Orleans when she was a young girl and my grandfather moved to LSU for college. Both of my parents went to LSU, although my mother graduated from the University of Texas.</p>
+<p> I have two younger sisters. One is studying at the University of North Georgia. The other is currently noodling around LA acting and stuff, check out her <a href="http://isabelsobrepera.com/">website</a>.</p>
+<p>I grew up spending lots of time with family. It seems like nearly every weekend I was at my granparents' camp on the north shore of Lake Ponchatrain. That was great fun, learning to love NPR, failing to fish, learning to shoot, building fires, swimming in a questionable river, making funfetti cake, moving piles of dirt, and spending time together.</p>
+<p>At the same time I spent countless days with my other grandparents, insisting that we must go to home depot to fix something, helping with the pool, playing in the backyard, swimming, on and on...</p>
+<p>Of couse I also spent tons of time with my parents (shocing right?). It is amazing that they put up with me all those years. I was (and still am) incesently curious, and they took the time to learn with me and help me to grow. They taught me right from wrong and helped me explore the world, sacrificing alot to make sure that I had the best opportunities available. I owe an incredible amount to them.</p>
+<p>Family is everything, it is the only thing you start life with. If you do it right, it is also the only thing you finish life with. Luckily I have a pretty great family.</p>
