added calendar landing page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="home">
-    <h3>Welcome to my personal site, please have a look around. Feel free to contact me via <a href="https://www.linkedin.com/in/michaelsobrepera">LinkedIn</a> or <a href="mailto:mjsobrep@live.com">e-mail</a>. To schedule things with me, take a look at <a href= "https://sharing.calendar.live.com/calendar/private/4daf7a00-2fa1-4e90-becf-a465291322b8/0b077663-1428-4c8e-baf8-8f7cdd547643/cid-5081e31f30d8f168/index.html">my calendar</a> (you can even subscribe to it) and send me an invitation for a time that is free. There are places to comment throughout the site, please feel free to leave your opinion.</h3>
+    <h3>Welcome to my personal site, please have a look around. Feel free to contact me via <a href="https://www.linkedin.com/in/michaelsobrepera">LinkedIn</a> or <a href="mailto:mjsobrep@live.com">e-mail</a>. To schedule things with me, take a look at <a href= "{{'calendar.html' | prepend: site.baseurl}}">my calendar</a> (you can even subscribe to it) and send me an invitation for a time that is free. There are places to comment throughout the site, please feel free to leave your opinion.</h3>
 </br>
 {% include tags.html tags=site.tags %}
 </br>
