updated nolonger at Lilly and resume

--- a/primaryPages/about.html
+++ b/primaryPages/about.html
@@ -4,7 +4,7 @@ title: About
 permalink: /about/
 ---
 <h3>Where I am now</h3>
-<p>I am a student at Georgia Tech, majoring in Biomedical Engineering with a Minor in Computer Science (focused on Intelligence) and planning to graduate in December of 2015. At the moment I am working at Eli Lilly in Indianapolis. I am in the corporate consulting group working on Automation and Controls work.</p>
+<p>I am a student at Georgia Tech, majoring in Biomedical Engineering with a Minor in Computer Science (focused on Intelligence) and planning to graduate in December of 2015.</p>
 
 <h3>My Interests</h3>
 <p>Currently, my primary interest is in robotics. Robotics is of course incredibly broad, but in general requires a synthesis of mechanics, algorithms, computation, advanced models, etc... The complexity of bringing these elements together is fascinating to me. For a long time my primary interests laid in medical device design and manufacture along with Health IT. I am excited to find ways to blend robotics with into all of its potential applications, including health care. Across nearly every sector, the growing field of robotics is going to be a game changer. From menial factory work that has prior to now been cost prohibitive to automate, to space exploration that used to be only in the reach of large governments, to elderly care where we have more demand than capacity and health care where more and more complicated procedures and treatments necessitate automation.</p>
@@ -15,7 +15,7 @@ permalink: /about/
 <h3>Hobbies</h3>
 <p>I love sailing (although I no longer have a sailboat) and live music. I also love creating stuff, that can be designing and building something from metal or wood or writing code. I also enjoy cooking and obviously eating (who doesn't). Lately I have also been getting back into rock climbing.</p>
 
-<h3>Family Background</h3>
+<h3>Familial Background</h3>
 <p>My mother is from Colombia, she moved to New Orleans with her family, when she was eight. My father was born in Baton Rouge and raised in New Orleans. His parents are both Cuban. My grandmother moved to New Orleans when she was a young girl and my grandfather moved to LSU for college. Both of my parents went to LSU, although my mother graduated from the University of Texas.</p>
 <p> I have two younger sisters. One is studying at the University of North Georgia. The other is currently noodling around LA acting and stuff, check out her <a href="http://isabelsobrepera.com/">website</a>.</p>
 <p>I grew up spending lots of time with family. It seems like nearly every weekend I was at my granparents' camp on the north shore of Lake Ponchatrain. That was great fun, learning to love NPR, failing to fish, learning to shoot, building fires, swimming in a questionable river, making funfetti cake, moving piles of dirt, and spending time together.</p>
