did some housekeeping and added links to CS projects

--- a/primaryPages/about.html
+++ b/primaryPages/about.html
@@ -3,8 +3,13 @@ layout: page
 title: About
 permalink: /about/
 ---
-<h3>Where I am now</h3>
-<p>I am a student at Georgia Tech, majoring in Biomedical Engineering with a Minor in Computer Science (focused on Intelligence) and planning to graduate in December of 2015.</p>
+<h3>Where I am Now</h3>
+<p>I am a student at Georgia Tech, majoring in Biomedical Engineering with a Minor in Computer Science (focused on Intelligence) and planning to graduate in December of 2015. Currently I am working in the Cognitive Robotics Lab under Henrik Christensen and Larry Sweet to advance technologies in the visual servoing space. I am focusing explicitly on potential manufacturing applications. In my work I am extensively utilizing heavy industrial robots and advanced vision systems. I am developing both perception and control systems in C++.</p>
+
+<h3>Where I am Going</h3>
+<p>
+    I am planning to go to graduate school to pursue a PhD. As such, I am currently applying to graduate schools. My goal long term is to stay in academia performing research and teaching as a professor. I really want to have the academic freedom afforded by academia and to be on the cutting edge of technology. I also really enjoy teaching. So on whole, this seems like a great route for me. Eventually I hope to be able to collaborate across the spectrum with other researchers and industrial partners. 
+</p>
 
 <h3>My Interests</h3>
 <p>Currently, my primary interest is in robotics. Robotics is of course incredibly broad, but in general requires a synthesis of mechanics, algorithms, computation, advanced models, etc... The complexity of bringing these elements together is fascinating to me. For a long time my primary interests laid in medical device design and manufacture along with Health IT. I am excited to find ways to blend robotics with into all of its potential applications, including health care. Across nearly every sector, the growing field of robotics is going to be a game changer. From menial factory work that has prior to now been cost prohibitive to automate, to space exploration that used to be only in the reach of large governments, to elderly care where we have more demand than capacity and health care where more and more complicated procedures and treatments necessitate automation.</p>
