added NSF stuff and fixed some link errors

--- a/_posts/projects/2013-08-19-AutoLiftBed.html
+++ b/_posts/projects/2013-08-19-AutoLiftBed.html
@@ -11,7 +11,7 @@ tags:
 - solidworks
 summary: A bed I designed and built whichs lifts out of the way
 imageDir: autoLiftBed
-thumb: autoLiftBed/isoUp.jpg
+thumb: autoLiftBed/isoUp.JPG
 ---
 
 <p>When I first moved to Georgia Tech, I was living in a very small 1BR/1BA apartment. After being there for a while, I decided to make a bed that could fold completely out of the way. It is totally freestanding and holds a queen sized mattress. It takes a little bit of strength to lift up, but not much.</p>
