--- a/projects/_posts/2013-03-28-First3Dprints.html
+++ b/projects/_posts/2013-03-28-First3Dprints.html
@@ -3,20 +3,26 @@ layout: post
 title:  "First 3D prints"
 date:   2013-03-28
 categories: projects
-imageDir: First3Dprints
 tags:
 - 3d printing
 - design
 - mechanics
 - CAD
 - solidworks
-thumb: "First3Dprints/WP_000750.jpg"
+thumb: "https://c7.staticflickr.com/9/8388/27995051454_f0e42627ce_n.jpg"
 summary: The first 3D printed parts I ever made
 ---
 
 <p>These were the first 3D prints I made back when the Whitaker machine shop at GT first got Makerbots. There are some legos and a ball and socket joint.</p>
-<!-- {% include pics.html src="intussassist/Paper Prototype" style="medPic" %} -->
+
+{% include flickr.html 
+    src="https://www.flickr.com/photos/138686863@N06/albums/72157671679417635" 
+    title="first 3d prints" 
+    img="https://c8.staticflickr.com/9/8748/27995772103_0efee1368a_c.jpg" 
+    width=600 
+    height=800 
+    %}
 
 {% include iframe.html src="https://www.youtube.com/embed/tc0nJsgD-pI" width=75 ratio=75 %}
-<br/>
+
 {% include iframe.html src="https://www.youtube.com/embed/btDP1WqMkO8" width=75 ratio=75 %}
