--- a/projects/_posts/2013-08-19-AutoLiftBed.html
+++ b/projects/_posts/2013-08-19-AutoLiftBed.html
@@ -10,13 +10,20 @@ tags:
 - CAD
 - solidworks
 summary: A bed I designed and built whichs lifts out of the way
-imageDir: autoLiftBed
-thumb: autoLiftBed/isoUp.JPG
+thumb: https://c7.staticflickr.com/9/8655/28578733926_0682db016f_n.jpg
 ---
 
 <p>When I first moved to Georgia Tech, I was living in a very small 1BR/1BA apartment. After being there for a while, I decided to make a bed that could fold completely out of the way. It is totally freestanding and holds a queen sized mattress. It takes a little bit of strength to lift up, but not much.</p>
 <p>All of the design work can be found on <a href=https://grabcad.com/library/loft-bed-2>GrabCad</a>. Do note that I did make some minor design changes as I went during fabrication and never did put those back into the models.</p>
 
 {% include iframe.html src="https://www.youtube.com/embed/b0nCnXNGmBg" width=100 ratio=56.25 %}
-<br/>
+
 {% include iframe.html src="https://www.youtube.com/embed/dAQi21dUNiY" width=100 ratio=56.25 %}
+
+{% include flickr.html 
+    src="https://www.flickr.com/photos/138686863@N06/albums/72157671677675015" 
+    title="auto-lift bed"
+    img="https://c7.staticflickr.com/9/8786/27994259414_faa743a845_z.jpg" 
+    width=640 
+    height=446 
+    %}
