updated about to say going to UPenn closes #15

--- a/primaryPages/about.html
+++ b/primaryPages/about.html
@@ -3,24 +3,24 @@ layout: page
 title: About
 permalink: /about/
 ---
-<h3>Where I am Now</h3>
-<p>I am a student at Georgia Tech, majoring in Biomedical Engineering with a Minor in Computer Science (focused on Intelligence) and planning to graduate in December of 2015. Currently I am working in the Cognitive Robotics Lab under Henrik Christensen and Larry Sweet to advance technologies in the visual servoing space. I am focusing explicitly on potential manufacturing applications. In my work I am extensively utilizing heavy industrial robots and advanced vision systems. I am developing both perception and control systems in C++.</p>
+<h2>Where I am Now</h2>
+<p>I am currently doing some traveling before starting grad school, pursuing a PhD, in August at UPenn. I will be working under Dr. Michelle Johnson in the Rehab Robotics lab.</p> 
 
-<h3>Where I am Going</h3>
+<h2>Where I am Going</h2>
 <p>
-    I am planning to go to graduate school to pursue a PhD. As such, I am currently applying to graduate schools. My goal long term is to stay in academia performing research and teaching as a professor. I really want to have the academic freedom afforded by academia and to be on the cutting edge of technology. I also really enjoy teaching. So on whole, this seems like a great route for me. Eventually I hope to be able to collaborate across the spectrum with other researchers and industrial partners. 
+    Through around 2021 I plan to be pursuing my PhD. My goal long term is to stay in academia performing research and teaching as a professor. I really want to have the academic freedom afforded by academia and to be on the cutting edge of technology. I also really enjoy teaching. So on whole, this seems like a great route for me. Eventually I hope to be able to collaborate across the spectrum with other researchers and industrial partners. 
 </p>
-
-<h3>My Interests</h3>
+`
+<h2>My Interests</h2>
 <p>Currently, my primary interest is in robotics. Robotics is of course incredibly broad, but in general requires a synthesis of mechanics, algorithms, computation, advanced models, etc... The complexity of bringing these elements together is fascinating to me. For a long time my primary interests laid in medical device design and manufacture along with Health IT. I am excited to find ways to blend robotics with into all of its potential applications, including health care. Across nearly every sector, the growing field of robotics is going to be a game changer. From menial factory work that has prior to now been cost prohibitive to automate, to space exploration that used to be only in the reach of large governments, to elderly care where we have more demand than capacity and health care where more and more complicated procedures and treatments necessitate automation.</p>
 
-<h3>Some About My Past</h3>
+<h2>Some About My Past</h2>
 <p>I was born and raised in New Orleans, Louisiana. I went to Trinity Episcopal School from 2nd through 7th grade and then Jesuit High School for 8th grade. My family moved to Acworth, Georgia right before I started High School. I attended Kennesaw Mountain High School, where I was very active in the student Government. I then studied Chemical Engineering for a year at Auburn University before transferring to Georgia Tech in the fall of 2012.</p>
 
-<h3>Hobbies</h3>
+<h2>Hobbies</h2>
 <p>I love sailing (although I no longer have a sailboat) and live music. I also love creating stuff, that can be designing and building something from metal or wood or writing code. I also enjoy cooking and obviously eating (who doesn't). Lately I have also been getting back into rock climbing.</p>
 
-<h3>Familial Background</h3>
+<h2>Familial Background</h2>
 <p>My mother is from Colombia, she moved to New Orleans with her family, when she was eight. My father was born in Baton Rouge and raised in New Orleans. His parents are both Cuban. My grandmother moved to New Orleans when she was a young girl and my grandfather moved to LSU for college. Both of my parents went to LSU, although my mother graduated from the University of Texas.</p>
 <p> I have two younger sisters. One is studying at the University of North Georgia. The other is currently noodling around LA acting and stuff, check out her <a href="http://isabelsobrepera.com/">website</a>.</p>
 <p>I grew up spending lots of time with family. It seems like nearly every weekend I was at my granparents' camp on the north shore of Lake Ponchatrain. That was great fun, learning to love NPR, failing to fish, learning to shoot, building fires, swimming in a questionable river, making funfetti cake, moving piles of dirt, and spending time together.</p>
