switched to doing doodle for scheduling

--- a/calendar.html
+++ b/calendar.html
@@ -3,25 +3,4 @@ layout: default
 ---
 <h1>Calendar</h1>
 <br/>
-
-<h2>Personal Calendar (relevant outside of working hours)</h2>
-<ul>
-    <li class='calListItem'><a href="https://sharing.calendar.live.com/calendar/private/4daf7a00-2fa1-4e90-becf-a465291322b8/0b077663-1428-4c8e-baf8-8f7cdd547643/cid-5081e31f30d8f168/index.html">View In Browser</a>
-    </li>
-
-    <li class='calListItem'><a href="webcals://sharing.calendar.live.com/calendar/private/4daf7a00-2fa1-4e90-becf-a465291322b8/0b077663-1428-4c8e-baf8-8f7cdd547643/cid-5081e31f30d8f168/calendar.ics">Import to Calendar App (ICS)</a>
-    </li>
-
-    <li class='calListItem'><a href="https://sharing.calendar.live.com/calendar/private/4daf7a00-2fa1-4e90-becf-a465291322b8/0b077663-1428-4c8e-baf8-8f7cdd547643/cid-5081e31f30d8f168/calendar.xml">View In Feed Browser (XML)</a>
-    </li>
-</ul>
-
-<h2>Work Calendar (relevant inside of working hours)</h2>
-<ul>
-    <li class='calListItem'><a href="https://calendar.google.com/calendar/embed?src=mjsobrep%40seas.upenn.edu&ctz=America/New_York">View In Browser</a>
-    </li>
-
-    <li class='calListItem'><a href="https://calendar.google.com/calendar/ical/mjsobrep%40seas.upenn.edu/public/basic.ics">Import to Calendar App (ICS)</a>
-    </li>
-</ul>
-
+I'm currently doing my scheduling through doodle. It has awfully annoying ads, but it gets the job done. You can send me a meating request here: <a href="http://doodle.com/mjsobrep">http://doodle.com/mjsobrep</a>
