--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="home">
-    <h3>Welcome to my personal site, please have a look around. Feel free to contact me via <a href="https://www.linkedin.com/in/michaelsobrepera">LinkedIn</a> or <a href="mailto:mjsobrep@live.com">e-mail</a>. To schedule things with me, take a look at <a href= "{{'calendar.html' | prepend: site.baseurl}}">my calendar</a> (you can even subscribe to it) and send me an invitation for a time that is free. There are places to comment throughout the site, please feel free to leave your opinion.</h3>
+    <h3>Welcome to my personal site, please have a look around. Feel free to contact me via <a href="https://www.linkedin.com/in/michaelsobrepera">LinkedIn</a> or <a href="mailto:mjsobrep@live.com">e-mail</a>. To schedule things with me, take a look at <a href= "{{'calendar.html' | prepend: site.baseurl}}">my availability</a> and send me an invitation for a time that is free. There are places to comment throughout the site, please feel free to leave your opinion.</h3>
     </br>
     {% include tags.html tags=site.tags %}
     </br>
