updated about me

--- a/primaryPages/about.html
+++ b/primaryPages/about.html
@@ -1,29 +1,22 @@
----
-layout: page
-title: About
-permalink: /about/
----
-<h2>Where I am Now</h2>
-<p>I am currently doing some traveling before starting grad school, pursuing a PhD, in August at UPenn. I will be working under Dr. Michelle Johnson in the Rehab Robotics lab.</p> 
+--- 
+layout: page 
+title: About 
+permalink: /about/ 
+--- 
 
-<h2>Where I am Going</h2>
-<p>
-    Through around 2021 I plan to be pursuing my PhD. My goal long term is to stay in academia performing research and teaching as a professor. I really want to have the academic freedom afforded by academia and to be on the cutting edge of technology. I also really enjoy teaching. So on whole, this seems like a great route for me. Eventually I hope to be able to collaborate across the spectrum with other researchers and industrial partners. 
-</p>
-`
-<h2>My Interests</h2>
-<p>Currently, my primary interest is in robotics. Robotics is of course incredibly broad, but in general requires a synthesis of mechanics, algorithms, computation, advanced models, etc... The complexity of bringing these elements together is fascinating to me. For a long time my primary interests laid in medical device design and manufacture along with Health IT. I am excited to find ways to blend robotics with into all of its potential applications, including health care. Across nearly every sector, the growing field of robotics is going to be a game changer. From menial factory work that has prior to now been cost prohibitive to automate, to space exploration that used to be only in the reach of large governments, to elderly care where we have more demand than capacity and health care where more and more complicated procedures and treatments necessitate automation.</p>
+<h2>Where I am Now</h2> 
+<p>I am currently doing a PhD at Penn in the Rehab Robotics Lab, part of the GRASP Lab. I live in Philly with my [fiancé](http://stephmd.com/), our dog [Abita](https://www.facebook.com/AbitaTheGolden/), and our cat Diana. </p> 
 
-<h2>Some About My Past</h2>
-<p>I was born and raised in New Orleans, Louisiana. I went to Trinity Episcopal School from 2nd through 7th grade and then Jesuit High School for 8th grade. My family moved to Acworth, Georgia right before I started High School. I attended Kennesaw Mountain High School, where I was very active in the student Government. I then studied Chemical Engineering for a year at Auburn University before transferring to Georgia Tech in the fall of 2012.</p>
+<h2>Where I am Going</h2> 
+<p> 
+My goal long term is to stay in academia doing research and teaching as a professor. I really want to have the academic freedom afforded by academia and to be on the cutting edge of technology. I also really enjoy teaching. So on whole, this seems like a great route for me. Eventually I hope to be able to collaborate across the spectrum with other researchers and industrial partners.  
+</p> 
 
-<h2>Hobbies</h2>
-<p>I love sailing (although I no longer have a sailboat) and live music. I also love creating stuff, that can be designing and building something from metal or wood or writing code. I also enjoy cooking and obviously eating (who doesn't). Lately I have also been getting back into rock climbing.</p>
+<h2>My Interests</h2> 
+<p>Currently, my primary interest is in robotics. Robotics is of course incredibly broad, but in general requires a synthesis of mechanics, algorithms, computation, advanced models, etc... The complexity of bringing these elements together is fascinating to me. For a long time, my primary interests laid in medical device design and manufacture along with Health IT. My research blends these two interests together. I am working to understand how social robots can be used in telepresence rehab interactions. Down the road, I would like to broaden back out and look at robots in manufacturing and space as well. I find I am generally most interested in how robots interact with people, which is going to become more relevant, in more fields, over the coming years.</p> 
 
-<h2>Familial Background</h2>
-<p>My mother is from Colombia, she moved to New Orleans with her family, when she was eight. My father was born in Baton Rouge and raised in New Orleans. His parents are both Cuban. My grandmother moved to New Orleans when she was a young girl and my grandfather moved to LSU for college. Both of my parents went to LSU, although my mother graduated from the University of Texas.</p>
-<p> I have two younger sisters. One is studying at the University of North Georgia. The other is currently noodling around LA acting and stuff, check out her <a href="http://isabelsobrepera.com/">website</a>.</p>
-<p>I grew up spending lots of time with family. It seems like nearly every weekend I was at my granparents' camp on the north shore of Lake Ponchatrain. That was great fun, learning to love NPR, failing to fish, learning to shoot, building fires, swimming in a questionable river, making funfetti cake, moving piles of dirt, and spending time together.</p>
-<p>At the same time I spent countless days with my other grandparents, insisting that we must go to home depot to fix something, helping with the pool, playing in the backyard, swimming, on and on...</p>
-<p>Of course I also spent tons of time with my parents (shocking right?). It is amazing that they put up with me all those years. I was (and still am) incessantly curious, and they took the time to learn with me and help me to grow. They taught me right from wrong and helped me explore the world, sacrificing a lot to make sure that I had the best opportunities available. I owe an incredible amount to them.</p>
-<p>Family is everything, it is the only thing you start life with. If you do it right, it is also the only thing you finish life with. Luckily I have a pretty great family.</p>
+<h2>Some About My Past</h2> 
+<p>I was born and raised in New Orleans, Louisiana. I went to Trinity Episcopal School from 2nd through 7th grade and then Jesuit High School for 8th grade. My family moved to Acworth, Georgia right before I started High School. I attended Kennesaw Mountain High School, where I was very active in the student Government. I then studied Chemical Engineering for a year at Auburn University before transferring to Georgia Tech in the fall of 2012. I graduated from Georgia Tech with a Bachelor’s of Science in Biomedical Engineering and a minor in Computer Science. I then spent some time working at Georgia Tech in the IRIM Tech Transition Lab.</p> 
+
+<h2>Hobbies</h2> 
+<p>I love sailing, which I currently do at [Liberty Sailing Club](https://libertysailing.clubexpress.com/) and live music. I also love creating, that can be designing and building something from metal or wood, writing code, or cooking (I am up to 3 grills and a smoker).</p> 
