fixed links on about me page

--- a/primaryPages/about.html
+++ b/primaryPages/about.html
@@ -5,7 +5,7 @@ permalink: /about/
 --- 
 
 <h2>Where I am Now</h2> 
-<p>I am currently doing a PhD at Penn in the Rehab Robotics Lab, part of the GRASP Lab. I live in Philly with my [fiancé](http://stephmd.com/), our dog [Abita](https://www.facebook.com/AbitaTheGolden/), and our cat Diana. </p> 
+<p>I am currently doing a PhD at Penn in the Rehab Robotics Lab, part of the GRASP Lab. I live in Philly with my <a href="stephmd.com">fiancé</a>, our dog <a href="https://www.facebook.com/AbitaTheGolden/">Abita</a>, and our cat Diana. </p> 
 
 <h2>Where I am Going</h2> 
 <p> 
@@ -19,4 +19,4 @@ My goal long term is to stay in academia doing research and teaching as a profes
 <p>I was born and raised in New Orleans, Louisiana. I went to Trinity Episcopal School from 2nd through 7th grade and then Jesuit High School for 8th grade. My family moved to Acworth, Georgia right before I started High School. I attended Kennesaw Mountain High School, where I was very active in the student Government. I then studied Chemical Engineering for a year at Auburn University before transferring to Georgia Tech in the fall of 2012. I graduated from Georgia Tech with a Bachelor’s of Science in Biomedical Engineering and a minor in Computer Science. I then spent some time working at Georgia Tech in the IRIM Tech Transition Lab.</p> 
 
 <h2>Hobbies</h2> 
-<p>I love sailing, which I currently do at [Liberty Sailing Club](https://libertysailing.clubexpress.com/) and live music. I also love creating, that can be designing and building something from metal or wood, writing code, or cooking (I am up to 3 grills and a smoker).</p> 
+<p>I love sailing, which I currently do at <a href="https://libertysailing.clubexpress.com/">Liberty Sailing Club</a> and live music. I also love creating, that can be designing and building something from metal or wood, writing code, or cooking (I am up to 3 grills and a smoker).</p> 
