--- a/primaryPages/about.html
+++ b/primaryPages/about.html
@@ -5,7 +5,7 @@ permalink: /about/
 --- 
 
 <h2>Where I am Now</h2> 
-<p>I am currently doing a PhD at Penn in the Rehab Robotics Lab, part of the GRASP Lab. I live in Philly with my <a href="stephmd.com">fiancé</a>, our dog <a href="https://www.facebook.com/AbitaTheGolden/">Abita</a>, and our cat Diana. </p> 
+<p>I am currently doing a PhD at Penn in the Rehab Robotics Lab, part of the GRASP Lab. I live in Philly with my <a href="http://stephmd.com/">fiancé</a>, our dog <a href="https://www.facebook.com/AbitaTheGolden/">Abita</a>, and our cat Diana. </p> 
 
 <h2>Where I am Going</h2> 
 <p> 
