--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@ layout: default
 ---
 
 <div class="home">
+    <div class="home-container">
+        <img src="{{site.baseurl}}/images/headshot.png"/ class="headshot-image">
     <div class="big-home">
     <p>Welcome to my personal site, please have a look around. Feel free to contact me via <a href="https://www.linkedin.com/in/michaelsobrepera">LinkedIn</a> or <a href="mailto:mjsobrep@live.com">e-mail</a>. To schedule things with me, take a look at <a href= "{{'calendar.html' | prepend: site.baseurl}}">my availability</a> and send me an invitation for a time that is free. There are places to comment throughout the site, please feel free to leave your opinion.</p>
-    
+
      <p>You can find this website hosted on github <a href="https://github.com/mjsobrep/mjsobrep.github.io/tree/deploy">here</a></p>
+    </div>
     </div>
     </br>
     {% include tags.html tags=site.tags %}
