--- a/primaryPages/experience.html
+++ b/primaryPages/experience.html
@@ -5,5 +5,5 @@ permalink: /experience/
 ---
 <h4>Connect with me on <a href="https://www.linkedin.com/in/michaelsobrepera"> LinkedIn </a></h4>
 
-<a href="/otherFiles/Resume.pdf"><h3>Resume</h3></a>
-{{"otherFiles/Resume.pdf" | insertPDF}}
+<a href="/otherFiles/MichaelSobrepera-CV.pdf"><h3>CV</h3></a>
+{{"otherFiles/MichaelSobrepera-CV.pdf" | insertPDF}}
