adding meeting link to contact page

--- a/primaryPages/contact.html
+++ b/primaryPages/contact.html
@@ -22,3 +22,5 @@ You can follow me / connect with me on:
 <li> <a href="https://www.linkedin.com/in/michaelsobrepera/">LinkedIn</a></li>
 <li> <a href="https://github.com/mjsobrep">GitHub @mjsobrep</a></li>
 </ul>
+
+You can also <a href="https://doodle.com/mm/michaelsobrepera/book-meeting">schedule a meeting with me</a>
