--- a/primaryPages/contact.html
+++ b/primaryPages/contact.html
@@ -7,7 +7,7 @@ hide_nav: true
 
 The best way to get in touch with me is via email:
 <ul>
-<li> Persomal: <a href="mailto:mjsobrep@live.com">mjsobrep@live.com</a></li>
+<li> Personal: <a href="mailto:mjsobrep@live.com">mjsobrep@live.com</a></li>
 <li> Work: <a href="mailto:mjsobrep@seas.upenn.edu">mjsobrep@seas.upenn.edu</a></li>
 </ul>
 
